# evmfuzzy

./: Cargo.toml  README.MD
src/: cache.rs  input.rs  main.rs  scheduler.rs  state.rs
src/evm/: abi.rs  config.rs  contract_utils.rs  host.rs  mod.rs  types.rs  vm.rs
src/evm/onchain/: endpoints.rs
src/evm/oracles/: erc20.rs
src/evm/producers/: erc20.rs
src/evm/solution/: mod.rs
src/evm/tokens/: mod.rs  v2_transformer.rs  v3_transformer.rs  weth_transformer.rs
src/fuzzers/: evm_fuzzer.rs  mod.rs
src/generic_vm/: mod.rs  vm_executor.rs  vm_state.rs
